# Naphome_Firmware

./: .env  .gitignore  .gitmodules  AFE_LED_INTEGRATION.md  AFE_PIPELINE_I2S_AEC_BSS_VAD.md  ARCHITECTURE.md  BOM.csv  BOM_0.9.csv  BUILD_AND_TEST_SUMMARY.md  CHANGELOG_OPENWAKEWORD.md  CMakeLists.txt  DATASHEETS.md  FARFIELD_ANALYSIS.md  FARFIELD_LED_FIX.md  GITHUB_PAGES_ENABLE.md  GITHUB_PAGES_SETUP.md  GITHUB_PAGES_SETUP_STATUS.md  OPENAI_REALTIME_AFE_INTEGRATION.md  OPENWAKEWORD_START_HERE.md  PUBLISH_INSTRUCTIONS.md  Product Req.html  Q&A for Sleep monitor.docx  Q&A for Sleep monitor.pages  README.md  README_OPENWAKEWORD.md  SOUND_REACTIVE_LED_FIX.md  TODO.md  TRAINING_STARTED.md  WAKENET_PARALLEL_LOCAL_CONTROL.md  esp32_rk3308.kicad_sch  hey_naptick.tflite  idf_component.yml  sdkconfig.defaults  test_simple.kicad_sch
Adafruit_BH1750_STEMMA_QT/: LINKS.txt
Adafruit_MAX98357A/: LINKS.txt
Adafruit_SGP30_STEMMA_QT/: LINKS.txt
Adafruit_SGP40_STEMMA_QT/: LINKS.txt
Adafruit_SHT30_STEMMA_QT/: LINKS.txt
M5Stack_Atom_S3R/: LINKS.txt
M5Stack_Audio_Module_ES8388/: LINKS.txt
M5Stack_DLight_BH1750/: LINKS.txt
M5Stack_ENV_III/: LINKS.txt
M5Stack_TVOC_SGP30/: LINKS.txt
Sensirion_SGP40/: LINKS.txt
Sensirion_SPS30/: LINKS.txt
SparkFun_SCD30_Qwiic/: LINKS.txt
WS2812B_LED_Strip/: LINKS.txt
components/aws_iot/: CMakeLists.txt  Kconfig
components/aws_iot/certs/: README.md  public_key.pem
components/aws_iot/include/: aws_iot.h  aws_iot_service.h
components/aws_iot/src/: aws_iot.c  aws_iot_config.c  aws_iot_service.c
components/cjson/: CMakeLists.txt
components/cspot_component/: CMakeLists.txt  Kconfig
components/esp_aws_iot/: CMakeLists.txt
components/esp_aws_iot/aws-iot-device-sdk-embedded-C/src/: aws_iot_json_utils.c  aws_iot_shadow_json.c
components/esp_aws_iot/port/: network_mbedtls_wrapper.c  timer.c
components/esp_aws_iot/port/include/: aws_iot_config.h  aws_iot_log.h  network_platform.h
components/openwakeword/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/openwakeword/include/: audio_features.h  model_loader.h  openwakeword.h  openwakeword_stats.h  tflite_wrapper.h
components/openwakeword/src/: audio_features.c  model_loader.c  openwakeword.c  openwakeword_test_mode.c  tflite_wrapper.cpp
components/sensor_manager/: CMakeLists.txt  Kconfig
components/sensor_manager/include/: sensor_integration.h  sensor_manager.h
components/sensor_manager/src/: sensor_integration.c  sensor_manager.c
config/: partitions.csv  sdkconfig.defaults
docs/: ARCHITECTURE_DIAGRAMS.md  AWS_IOT_TEST_README.md  AWS_IOT_VALIDATION_GUIDE.md  BLE_TEST_RESULTS.md  CERTIFICATE_DIAGNOSTICS.md  COMMUNICATION_MODES.md  CSPOT_TOKEN_INFO.md  ESP32-S3-Korvo-1_V6.txt  ESP_SR_TRAINING_SUMMARY.md  FACE_LED_SIMULATOR.md  FIRMWARE_FLASHER_README.md  FIRMWARE_STREAMING_ANALYSIS.md  FIX_SUMMARY.md  GEMINI_PIPELINE_COMPLETE_REVIEW.md  GEMINI_PIPELINE_REVIEW.md  HEY_NAPTICK_SETUP_COMPLETE.md  HEY_NAPTICK_TRAINING_QUICK_START.md  IOT_MQTT_SENSOR_DATA_UPDATE.md  IS_DEVICE_PUBLISHING.md  LOG_REVIEW_GUIDE.md  NO_MESSAGES_TROUBLESHOOTING.md  OPENWAKEWORD_ARCHITECTURE.md  OPENWAKEWORD_COMPLETE_INDEX.md  OPENWAKEWORD_COMPLETE_SUMMARY.md  OPENWAKEWORD_CONTINUATION_COMPLETE.md  OPENWAKEWORD_CONTINUATION_FINAL.md  OPENWAKEWORD_CONTINUATION_SUMMARY.md  OPENWAKEWORD_FINAL_STATUS.md  OPENWAKEWORD_FINAL_SUMMARY.md  OPENWAKEWORD_GETTING_STARTED.md  OPENWAKEWORD_MIGRATION_GUIDE.md  OPENWAKEWORD_NEXT_STEPS.md  OPENWAKEWORD_PORT_SUMMARY.md  OPENWAKEWORD_PRODUCTION_GUIDE.md  OPENWAKEWORD_QUICK_REFERENCE.md  OPENWAKEWORD_QUICK_START.md  OPENWAKEWORD_READY_TO_USE.md  OPENWAKEWORD_TEST_MODE.md  OPENWAKEWORD_VS_ESP_SR.md  README.md  (+33 more)
logs/: .0f81574db4f771a0079f503903dc5653eec8034b-audit.json
main/: CMakeLists.txt  audio_player.c  aws_iot_bridge.c  aws_iot_bridge.h  device_state.c  device_state.h  gemini_client.c  gemini_client.h  intent_router.c  intent_router.h  kva_config_defaults.h  main.c  naphome_voice_assistant_main.c  openai_client.h  openwakeword_integration_example.c  serial_command_parser.c  spotify_client.h  spotify_player.cpp  version_info.h.in  voice_pipeline.c  voice_pipeline.h  wake_word_service_oww_integration.c
samples/atom_echo_rules_demo/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_player_stub.c  aws_led_stub.c  device_state.c  device_state.h  display_matrix.c  display_matrix.h  display_matrix_m5gfx.cpp  face_led_mapping.json  face_led_positions.h  face_led_simulator.c  face_led_simulator.h  gemini_secrets.h  gemini_service.c  gemini_service.h  i2c_scanner.c  i2c_scanner.h  naphome_face_image.h  naphome_image.h  rule_store.c  rule_store.h  rule_update_channel.c  rule_update_channel.h  scene_controller.c  scene_controller.h  sensor_reader.c  sensor_reader.h  somnus_action_handler.c  somnus_action_handler.h  spotify_service.c  spotify_service.h  status_display.c  status_display.h  webserver.c
samples/korvo_openai_voice/main/: CMakeLists.txt  korvo_audio.c  korvo_audio.h  openai_client.c  openai_client.h  openai_voice_main.c
samples/korvo_openwakeword_demo/main/: CMakeLists.txt  Kconfig.projbuild  main.c
samples/korvo_voice_assistant/: CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.bak  sdkconfig.defaults
samples/korvo_voice_assistant/main/: CMakeLists.txt  audio_player.h  button_service.c  button_service.h  device_state.c  gemini_client.c  gemini_secrets.h.in  korvo_audio.c  korvo_audio.h  led_controller.c  led_controller.h  led_status.h  naphome_voice_assistant_main.c  openai_client.c  openai_secrets.h.in  serial_command_parser.c  serial_command_parser.h  spotify_client.c  spotify_player.cpp  spotify_player.h  voice_pipeline.c  voice_pipeline.h  wake_word_service.c  wake_word_service.h  wake_word_service_oww_patch.diff
samples/korvo_voice_assistant/spiffs/Cert/: README.md
scripts/: README_TESTING.md  README_capture_logs.md  README_dashboard.md  README_reboot_verify.md  README_test_voice.md  add_todos_to_project.py  analyze_face_oval.py  ble_client_test.py  capture_logs.py  check_device_publishing.sh  monitor_console.py  (+28 more)
(+187 files in other folders)
