idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        driver
        nvs_flash
        esp_wifi
        esp_netif
        vfs
        spiffs
        esp_timer
        somnus_ble
        wifi_manager
        naptick_config
        naptick_http
        naptick_mqtt
        naptick_uart
)
